# Personal-Finance-ML-Project

./: .gitignore  LICENSE  ML_Proposal.ipynb  README.md  pyproject.toml  requirements.txt
scripts/: eda.py  make_dataset.py  run_pipieline.py
src/: config.py  data_processing.py  debug_leakage.py  evaluate.py  features.py  main.py  report.py  train_baselines.py  visualization.py
